STYLE Fix Gap on Header Content
Fixed the gap in between header text and image.

--- a/style.css
+++ b/style.css
@@ -59,6 +59,7 @@ body{
 .header-content {
     margin: 3rem 0rem;
     display: flex;
+    gap: 1rem;
 }
 
 .header-content .header-text    {
